fix(Viewer): Adjust toolbar spacing and button size

--- a/react/Viewer/components/styles.styl
+++ b/react/Viewer/components/styles.styl
@@ -65,8 +65,8 @@
     z-index var(--zIndex-modal-toolbar)
     display flex
     flex-shrink 0
-    width calc(100% - 2rem)
-    padding 0 1rem
+    width calc(100% - 1rem)
+    padding 0 0.5rem
     height $toolbarHeight
     transition .4s opacity ease-out
     background linear-gradient(to bottom, var(--charcoalGrey), rgba(50, 54, 63, 0))
